--- a/JJonahJamesonBot/Pages/Index.cshtml
+++ b/JJonahJamesonBot/Pages/Index.cshtml
@@ -21,7 +21,7 @@
                 <div id="file-container">
                     <div id="spacer"></div>
                     <label id="file-upload-label" for="file-upload">
-                        +
+                        <span id="file-upload-text">+</span>
                         <input type="file" id="file-upload" name="file-upload" accept=".jpg,.jpeg,.png" />
                     </label>
                 </div>
@@ -30,10 +30,12 @@
             <div id="image-container"></div>
         </div>
         <div class="col-10 col-md-7">
-            <img class="ml-5 mr-5 mb-5 p-5" id="the-man" src="~/images/the-man.gif" />
+            <div id="the-man-container" class="p-5">
+                <img class="ml-5 mr-5 mb-4" id="the-man" src="~/images/the-man.gif" />
+            </div>
             <div id="button-row">
-                <button id="give-button">GIVE HIM PICTURES OF SPIDERMAN!</button>
-                <img class="ml-5" id="load-spinner" src="~/images/loading.gif" />
+                <button id="give-button" class="mt-2">GIVE HIM PICTURES OF SPIDERMAN!</button>
+                <img id="load-spinner" src="~/images/loading.gif" />
             </div>
         </div>
     </div>
